--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h2>test page</h2>
-<p th:text="${test}">
+<p th:text="${test_attr}">
     <strong>check model attribute!</strong>
 </p>
 <label id="lbl">test</label>
