fix the typo in thymeleaf template

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -5,7 +5,7 @@
     <title>test</title>
     <link th:href="@{/styles/test.css}" rel="stylesheet"/>
     <script th:inline="javascript">
-        var attr_var = /*[[${test}]]*/;
+        var attr_var = /*[[${test_attr}]]*/;
     </script>
     <script type="text/javascript" th:src="@{/scripts/test.js}"></script>
 </head>
